--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>네이버 밴드</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="index.css">
+   <link rel="stylesheet" href="CSS/reset.css">
+   <link rel="stylesheet" href="CSS/index.css">
 </head>
 <body>
 <header>
     <div class="header-inner">
-        <h1 id="band-banner">
-            <a href="#" class="bandlogo">Band</a>
+        <h1 id="header-title">
+            <a href="#" class="bandlogo">
+                <span class="hide">BAND</span>
+            </a>
         </h1>
-        <div>
+        <div class="float-section">
             <a href="#" class="laungage-btn">한국어 ▾</a>
             <a href="#" class="signup-btn">회원가입 ▾</a>
             <a href="#" class="login-btn">로그인</a>
@@ -31,7 +33,7 @@
                 </figure>
             </div>
             <div class="login-section">
-                <div class="login wrap">
+                <div class="login-wrap">
                     <h2 class="title">
                         모임이 쉬워진다! 
                         <br>
@@ -43,7 +45,7 @@
                         <a href="#" class="signupbox">회원가입</a>
                     </div>
                     <div class="findband">
-                        <p>"내게 맞는 밴드를 찾으려면</p>
+                        <p>내게 맞는 밴드를 찾으려면</p>
                         <a href="#">밴드찾기</a>
                     </div>
                     <div class="wayband">
