--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>네이버 밴드</title>
+    <title> 모임이 쉬워진다 | 밴드 </title>
    <link rel="stylesheet" href="CSS/reset.css">
    <link rel="stylesheet" href="CSS/index.css">
 </head>
@@ -67,9 +67,9 @@
         <ul class="band-list">
 
             <li class="band-item">
-                <div class="band-img">
+                <figure> class="band-img">
                     <img src="" alt="밴드를즐기는사람들1">
-                </div>
+                </figure>
 
                 <div class="band-explanation">
                     <strong class="title">어떤 모임이라도!</strong>
@@ -81,9 +81,9 @@
             </li>
 
             <li class="band-item">
-                <div class="band-img">
+                <figure class="band-img">
                     <img src="" alt="밴드를즐기는사람들2">
-                </div>
+                </figure>
 
                 <div class="band-explanation">
                     <strong class="title">모임에 딱 맞는 기능들</strong>
@@ -95,9 +95,9 @@
             </li>
 
             <li class="band-item">
-                <div class="band-img">
+                <figure class="band-img">
                     <img src="" alt="밴드를즐기는사람들3">
-                </div>
+                </figure>
 
                 <div class="band-explanation">
                     <strong class="title">내가 원하는 모임 찾기</strong>
@@ -115,6 +115,8 @@
         <div class="wrap">
             <div class="title-area">
                 <h3 class="title">이런 밴드는 어때요</h3>
+                <!-- flex.bet -->
+                <a href="#">모두보기</a>
             </div>
             <ul>
                 <li>
@@ -177,7 +179,7 @@
                             </div>
                             <div class="howword-area">
                                 <div class="word">
-                                    <strong class="title">실내자전거 인증밴드/strong>
+                                    <strong class="title">실내자전거 인증밴드</strong>
                                     <p class="small-title">자전거 조아</p>
                                     <p class="gray">멤버1,319 · 리더 자전거</p>
                                 </div>
@@ -233,8 +235,7 @@
                                 </div>
                                 <div class="plus-area">
                                     <p class="plus-word">
-                                            <span> <strong>제 2외국어 공부</strong> </span>
-                                            <span> 밴드 더보기 </span>
+                                            <span> <strong>제 2외국어 공부</strong> </span>밴드 더보기 
                                     </p>
                                 </div>
                             </div>
@@ -375,9 +376,13 @@
         <div class="appdownload-inner">
             <div class="band-banner">
                 <span class="band-img~">Band</span>
+            </div>
+
+            <div>
                 <strong class="title"></strong>
                 <p class="smalltitle"></p>
             </div>
+
             <div class="download-banner">
                 <a href="#" id="google-play"></a>
                 <a href="#" id="appstore"></a>
