--- a/index.html
+++ b/index.html
@@ -171,26 +171,28 @@
                         </div>
                     </li>
 
-                <li>
-                    <a href="#">
-                        <div>
-                            <div class="howimg-area">
-                                <figure>
-                                    <img src="#" alt="밴드이미지">
-                                </figure>
+                    <li class="cover-item">
+                        <div class="band-uri">
+                            <div class="cover">
+                                <span class="cover-inner">
+                                    <img src="/IMG/b1.jpg" class="band-img" alt="밴드 이미지"93p>
+                                </span>
                             </div>
-                            <div class="howword-area">
-                                <div class="word">
-                                    <strong class="title">실내자전거 인증밴드</strong>
-                                    <p class="small-title">자전거 조아</p>
-                                    <p class="gray">멤버1,319 · 리더 자전거</p>
-                                </div>
-                                <div class="plus-area">
-                                    <p class="plus-word">
-                                            <span> <strong>실내자전거</strong> </span>
-                                            <span> 밴드 더보기 </span>
-                                    </p>
-                                </div>
+                        </div>
+                        <div class="band-name">
+                            <strong class="name">
+                                토트넘과 K리그 팬밴드 +해외축구
+                            </strong>
+                            <p class="band-ad">토트넘과 K리그의 팬밴드이지만 축구팀 팬이시면 누구든 환영합니다!</p>
+                            <p class="howmany"> <span>멤버 596</span>
+                                <span>리더 갓쏘니</span>
+                            </p>
+                            <a href="#" class="band-link">
+                            <strong class="bold"> 축구 팬밴드 </strong> 밴드 더보기
+                            </a>
+                        </div>
+                    </li>
+                    
                     <li class="cover-item">
                         <div class="band-uri">
                             <div class="cover">
@@ -235,25 +237,28 @@
                         </div>
                     </li>
 
-                <li>
-                    <a href="#">
-                        <div>
-                            <div class="howimg-area">
-                                <figure>
-                                    <img src="#" alt="밴드이미지">
-                                </figure>
+                    <li class="cover-item">
+                        <div class="band-uri">
+                            <div class="cover">
+                                <span class="cover-inner">
+                                    <img src="/IMG/b1.jpg" class="band-img" alt="밴드 이미지"93p>
+                                </span>
                             </div>
-                            <div class="howword-area">
-                                <div class="word">
-                                    <strong class="title">제 2외국어 공부</strong>
-                                    <p class="small-title">제 2외국어 공부해요 외국어 공부</p>
-                                    <p class="gray">멤버1,319 · 리더 제 2외국어 공부</p>
-                                </div>
-                                <div class="plus-area">
-                                    <p class="plus-word">
-                                            <span> <strong>제 2외국어 공부</strong> </span>밴드 더보기 
-                                    </p>
-                                </div>
+                        </div>
+                        <div class="band-name">
+                            <strong class="name">
+                                토트넘과 K리그 팬밴드 +해외축구
+                            </strong>
+                            <p class="band-ad">토트넘과 K리그의 팬밴드이지만 축구팀 팬이시면 누구든 환영합니다!</p>
+                            <p class="howmany"> <span>멤버 596</span>
+                                <span>리더 갓쏘니</span>
+                            </p>
+                            <a href="#" class="band-link">
+                            <strong class="bold"> 축구 팬밴드 </strong> 밴드 더보기
+                            </a>
+                        </div>
+                    </li>
+
                     <li class="cover-item">
                         <div class="band-uri">
                             <div class="cover">
