--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
     <div class="appdownload-area">
         <div class="appdownload-inner">
             <div class="band-banner">
-                <span class="band-img~">Band</span>
+                <span class="hide">Band</span>
             </div>
 
             <div>
