--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 
                 <ul id="how-main-area">
                     <li class="cover-item">
+                        <a href="#">
                         <div class="band-uri">
                             <div class="cover">
                                 <span class="cover-inner">
@@ -140,9 +141,11 @@
                             <strong class="bold"> 축구 팬밴드 </strong> 밴드 더보기
                             </a>
                         </div>
+                        </a>
                     </li>
 
                     <li class="cover-item">
+                        <a href="#">
                         <div class="band-uri">
                             <div class="cover">
                                 <span class="cover-inner">
@@ -162,9 +165,11 @@
                             <strong class="bold"> 축구 팬밴드 </strong> 밴드 더보기
                             </a>
                         </div>
+                        </a>
                     </li>
 
                     <li class="cover-item">
+                        <a href="#">
                         <div class="band-uri">
                             <div class="cover">
                                 <span class="cover-inner">
@@ -184,9 +189,11 @@
                             <strong class="bold"> 축구 팬밴드 </strong> 밴드 더보기
                             </a>
                         </div>
+                        </a>
                     </li>
 
                     <li class="cover-item">
+                        <a href="#">
                         <div class="band-uri">
                             <div class="cover">
                                 <span class="cover-inner">
@@ -206,9 +213,11 @@
                             <strong class="bold"> 축구 팬밴드 </strong> 밴드 더보기
                             </a>
                         </div>
+                        </a>
                     </li>
 
                     <li class="cover-item">
+                        <a href="#">
                         <div class="band-uri">
                             <div class="cover">
                                 <span class="cover-inner">
@@ -228,9 +237,11 @@
                             <strong class="bold"> 축구 팬밴드 </strong> 밴드 더보기
                             </a>
                         </div>
+                        </a>
                     </li>
 
                     <li class="cover-item">
+                        <a href="#">
                         <div class="band-uri">
                             <div class="cover">
                                 <span class="cover-inner">
@@ -250,9 +261,11 @@
                             <strong class="bold"> 축구 팬밴드 </strong> 밴드 더보기
                             </a>
                         </div>
+                        </a>
                     </li>
 
                     <li class="cover-item">
+                        <a href="#">
                         <div class="band-uri">
                             <div class="cover">
                                 <span class="cover-inner">
@@ -272,9 +285,11 @@
                             <strong class="bold"> 축구 팬밴드 </strong> 밴드 더보기
                             </a>
                         </div>
+                        </a>
                     </li>
 
                     <li class="cover-item">
+                        <a href="#">
                         <div class="band-uri">
                             <div class="cover">
                                 <span class="cover-inner">
@@ -294,9 +309,11 @@
                             <strong class="bold"> 축구 팬밴드 </strong> 밴드 더보기
                             </a>
                         </div>
+                        </a>
                     </li>
 
                     <li class="cover-item">
+                        <a href="#">
                         <div class="band-uri">
                             <div class="cover">
                                 <span class="cover-inner">
@@ -316,9 +333,11 @@
                             <strong class="bold"> 축구 팬밴드 </strong> 밴드 더보기
                             </a>
                         </div>
+                        </a>
                     </li>
 
                     <li class="cover-item">
+                        <a href="#">
                         <div class="band-uri">
                             <div class="cover">
                                 <span class="cover-inner">
@@ -338,50 +357,7 @@
                             <strong class="bold"> 축구 팬밴드 </strong> 밴드 더보기
                             </a>
                         </div>
-                    </li>
-
-                    <li class="cover-item">
-                        <div class="band-uri">
-                            <div class="cover">
-                                <span class="cover-inner">
-                                    <img src="/IMG/b1.jpg" class="band-img" alt="밴드 이미지"93p>
-                                </span>
-                            </div>
-                        </div>
-                        <div class="band-name">
-                            <strong class="name">
-                                토트넘과 K리그 팬밴드 +해외축구
-                            </strong>
-                            <p class="band-ad">토트넘과 K리그의 팬밴드이지만 축구팀 팬이시면 누구든 환영합니다!</p>
-                            <p class="howmany"> <span>멤버 596</span>
-                                <span>리더 갓쏘니</span>
-                            </p>
-                            <a href="#" class="band-link">
-                            <strong class="bold"> 축구 팬밴드 </strong> 밴드 더보기
-                            </a>
-                        </div>
-                    </li>
-
-                    <li class="cover-item">
-                        <div class="band-uri">
-                            <div class="cover">
-                                <span class="cover-inner">
-                                    <img src="/IMG/b1.jpg" class="band-img" alt="밴드 이미지"93p>
-                                </span>
-                            </div>
-                        </div>
-                        <div class="band-name">
-                            <strong class="name">
-                                토트넘과 K리그 팬밴드 +해외축구
-                            </strong>
-                            <p class="band-ad">토트넘과 K리그의 팬밴드이지만 축구팀 팬이시면 누구든 환영합니다!</p>
-                            <p class="howmany"> <span>멤버 596</span>
-                                <span>리더 갓쏘니</span>
-                            </p>
-                            <a href="#" class="band-link">
-                            <strong class="bold"> 축구 팬밴드 </strong> 밴드 더보기
-                            </a>
-                        </div>
+                        </a>
                     </li>
                 </ul>
         </div>
